--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="row">
             <div class="col-sm-12">
                 <ul>
-                    <li>Favorite Foods</li>
-                    <li>Favorite Movies</li>
-                    <li>Favorite CSS Frameworks</li>
+                    <li><a href="/foods">Favorite Foods</a></li>
+                    <li><a href="/movies">Favorite Movies</a></li>
+                    <li><a href="/css">Favorite CSS Frameworks</a></li>
                 </ul>
             </div>
         </div>
